--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "fabpot/goutte": "~2.0"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3",
+        "phpunit/phpunit": "5.4.*"
     },
     "scripts": {
         "post-root-package-install": [
